--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
